--- a/LoveHeart/LoveHeart.csproj
+++ b/LoveHeart/LoveHeart.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Receptionist.cs" />
     <Compile Include="MenuHandler.cs" />
+    <Compile Include="RMenu.cs" />
+    <Compile Include="SysAdmin.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
